@@ -8,18 +8,29 @@ CompoundDistribution<- function( NumbOfSummandsDistr, SummandsDistr, .withSim = 
                                  withSimplify = FALSE){
 
   Symmetry <- NoSymmetry()
-  
+
   if(!is(NumbOfSummandsDistr,"DiscreteDistribution"))
     stop("Argument 'NumbOfSummandsDistr' must be of class 'DiscreteDistribution'")
+
   supp <- support(NumbOfSummandsDistr)
   if(!(all(.isInteger(supp))&&all(supp >=0)))
     stop("Support of 'NumbOfSummandsDistr' must be non neg. integers")
 
   if(!is(SummandsDistr,"UnivDistrListOrDistribution"))
     stop("Argument 'SummandsDistr' must be of class 'UnivDistrListOrDistribution'")
-  supp <- support(NumbOfSummandsDistr)
+
+##20200918 can be deleted:  supp <- support(NumbOfSummandsDistr)
+
   supp <- as(supp,"integer")
   suppNot0 <- supp[supp!=0L]
+
+  ## new 20200918 triggered by mail by Vlada Milchevskaya vmilchev@uni-koeln.de
+  ## special treatment of case support is of length 1
+  if(length(supp)==1L){
+     if(supp[1]==0L) return(Dirac(0))
+     return(convpow(SummandsDistr,supp[1]))
+  }
+
   is0 <- 0 %in% supp
   lI <- vector("list", length(supp))
   if(is0) lI[[1]] <- Dirac(0)
@@ -33,7 +44,7 @@ CompoundDistribution<- function( NumbOfSummandsDistr, SummandsDistr, .withSim = 
              S <- convpow(SummandsDistr,suppNot0[i])
 #             S <- S + x0
              lI[[i+is0]] <- S
-        }     
+        }
       Symmetry <- Symmetry(SummandsDistr)
      }else{
        supp <- min(supp):max(supp)
@@ -52,11 +63,11 @@ CompoundDistribution<- function( NumbOfSummandsDistr, SummandsDistr, .withSim = 
               SymmL <- is(SymmI, "SphericalSymmetry")
               if(SymmL)
                  SymmL <- .isEqual(SymmCenter(SymmI),SymmC)
-           }    
+           }
            S <- S + SummandsDistr[[i]]
            lI[[i+is0]] <- S
        }
-       if(SymmL) Symmetry <- SphericalSymmetry(SymmC) 
+       if(SymmL) Symmetry <- SphericalSymmetry(SymmC)
      }
   UV <- do.call("UnivarMixingDistribution",
                  args = c(list(mixCoeff = d(NumbOfSummandsDistr)(supp),
